<resources>
    <string name="app_name">CGS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>

    <string name="str_somethingWentWrong">Something went wrong. Try again Later</string>


    <string name="str_schoolName">School Name</string>


    <!-- Activity Splash strings   -->
    <string name="str_splashWelcomeMessage">Welcome to Student Portal</string>


    <!--    Activity Login strings-->
    <string name="str_studentRegNo">Reg # </string>
    <string name="str_studentReg">Registration Number </string>
    <string name="str_studentPassword">Password</string>
    <string name="str_btnLogin">Login</string>
    <string name="str_forgotPassword"><u>Forgot Password?</u></string>
    <string name="str_login">login</string>
    <string name="str_welcome_back">Welcome to Login</string>
    <string name="str_query">Have Any Queries? </string>
    <string name="str_contact_us"><u>Contact Us</u></string>


    <!--    Activity My Profile Strings-->
    <string name="str_studentName">Name </string>
    <string name="str_studentFatherName">Father Name</string>
    <string name="str_studentDOB">Date of Birth</string>
    <string name="str_studentGender">Gender</string>
    <string name="str_studentPhoneNo">Phone No</string>
    <string name="str_studentEmail">Email</string>
    <string name="str_studentHomeAddress">Address</string>
    <string name="str_strDB">Data from Database</string>

    <!--    Activity Forget Password Strings-->
    <string name="str_studentFatherCNIC">Father CNIC</string>
    <string name="str_forget">FORGET PASSWORD</string>
    <string name="verify">Verify</string>


    <!--    Activity Reset Password Strings-->
    <string name="str_new">NEW CREDENTIAL</string>
    <string name="str_password">PASSWORD</string>
    <string name="str_newcred">Your identity has been verfified! Set Your new Password</string>
    <string name="str_re_password">Re Password</string>
    <string name="str_update">update</string>
    <string name="str_fp">Provide your account\'s Reg and Father CNIC for which you want to rest your password</string>

    <!--   Activity Notifications Strings-->
    <string name="str_notifications">Notifications</string>
    <string name="str_earlier">Earlier</string>

    <!--   Activity password updated successfully Strings-->
    <string name="str_pu">Your password updated successfully</string>
    <string name="str_updated">UPDATED</string>

    <!--   Home Strings-->
    <string name="str_result">Result</string>
    <string name="str_datesheet">Date Sheet</string>
    <string name="str_timetable">Time Table</string>
    <string name="str_news">News</string>
    <string name="str_academics">Academics</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_to">To</string>
    <string name="str_announcement">Announcement</string>
    <string name="str_settings">Fee</string>
    <string name="str_contact">Contact Us</string>
    <string name="str_schooln">Mehtab Public High School</string>

    <!--   Profile Strings-->
    <string name="str_name">Name</string>
    <string name="str_s_o">S/O</string>
    <string name="str_class">Class </string>
    <string name="str_feedback">FeedBack</string>
    <string name="str_attendance">Attendance</string>
    <string name="str_report">Report</string>

    <!--   Activity Feedback  Strings-->
    <string name="str_feedbackus">Your Feedback Important for Us</string>
    <string name="str_dearuser">Dear Parents, we heartily appreciated your feedback and your loving words.</string>

    <!--   Activity Result  Strings-->
    <string name="str_obtain_marks">Out Of</string>
    <string name="str_subject">Subject</string>
    <string name="str_marks">Total</string>
    <string name="str_grade">Obtain</string>

    <!--   Activity Report  Strings-->
    <string name="str_hello">Hello</string>
    <string name="str_parent_of">Parent Of</string>

    <!--   bootomseet attenadnce  Strings-->
    <string name="str_schoolname">Mehtab Public High School Chak No 86 Sb Sargodha</string>
    <string name="str_today">Today</string>
    <string name="str_date">Date</string>
    <string name="str_attendance_status">Attendance Status</string>
    <string name="str_status">Status</string>
    <string name="school_name">Comprehensive Model Boys High School, Sillanwali (Sargodha)</string>
    <string name="dmsg">"Chairman’s Message I firmly believe that education is the basic right of all human beings living on this planet regardless of their social background. An educated nation is democratically stable and consistent in its economic viability, what I have learnt through my passion for education for the last Three decades.  Though the state is primarily responsible to eradicate illiteracy, this task cannot be accomplished without realization and joint endeavors by the stakeholders of our society.  In order to enable all individuals to reach and utilize their maximum potential, education is categorically imperative. Education also combats unemployment, confirms sound foundation of social equity, awareness, tolerance and spread of political socialization and cultural vitality. To meet such challenges we all need to extend helping-hand to one another.  I am proud of the fact that we have been able to make a remarkable contribution for quality education in Pakistan. We have, therefore, tried to share in the development of human resource capital from the general masses by providing affordable educational opportunities throughout Pakistan.  I hope and desire that our education system should produce responsible, enlightened citizens to align Pakistan with the global framework of economic and social prosperity. I am confident that Comprehensive Group of Schools will suffice this dire need of our society.  Comprehensive Group of Schools is another effort to remain on the leading role for literacy improvement in Pakistan. I therefore, welcome parents and their children to become part of Comprehensive group of Schools family to grow together.  I believe it is today we must create the world of the future. "</string>
    <string name="pmsg">Welcome to Comprehensive Group of Schools Sillanwali Campus  Thanks to Allah Almighty for the accomplishment and attainment of our endeavors in facilitating our students and ensuring relevant and quality education. I would like to pay a whole-hearted tribute to all past and present students and members of staff, who have worked and are currently working for the benefits of society and their high pinnacles of attainment under the fundamental rules of Islam. We want CGS to take its place in the society as a leading, innovative, professional, result-oriented and conspicuous school, yet a school that is affordable to all classes of society. We welcome the suggestions of all the concerned in regards to the improvement of the institute and achievement of our goals. In the light of our respected colleagues’, parents’ and advisors’ precious suggestions, we here keep exploring ever-expanding horizons and aim to consolidate tremendous achievements in the years to come. The efforts and output of young generation, their highly praiseworthy results and their zealous participation in curricular as well as co-curricular activities have proven that they are capable of achieving supreme heights in the world of education and its yearning as well as the global competition.  Thank you and God bless you!</string>

</resources>