<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityResetPassword">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/updateanim" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/animationView"
        android:layout_marginTop="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/f_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/str_new"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ff_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f_p"
                android:layout_centerHorizontal="true"
                android:text="@string/str_credential"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fpinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ff_p"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/str_newcred"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/_12ssp"
                android:textStyle="italic" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password_lay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fpinfo"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:hint="@string/str_password"
                android:textColorHint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue_dark"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_re_pass_lay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_password_lay"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:hint="@string/str_re_password"
                android:textColorHint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue_dark"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_re_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/edt_re_pass_lay"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/str_update"
                android:textColor="@color/black_m"
                android:textSize="@dimen/_14ssp" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>