<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activities.ActivityForgetPasswordAuth">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/forgetpassanim" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="13">

        <RelativeLayout
            android:id="@+id/lay_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/str_forget"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/lay_inputf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/lay_log"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_weight="6"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_registerno_lay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:hint="@string/str_studentRegNo"
                android:textColorHint="@color/black_gray"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="Required*"
                app:helperTextTextColor="#D50000"
                app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_Fcnic_lay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:hint="@string/str_studentFatherCNIC"
                android:textColorHint="@color/black_gray"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="Required*"
                app:helperTextTextColor="#D50000"
                app:startIconDrawable="@drawable/ic_baseline_credit_card_24"
                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_fb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/lay_inputf"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="2"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>