<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottam_nav_bg"
    android:elevation="16dp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0.1dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <RelativeLayout
        android:id="@+id/lay_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:src="@drawable/appicon" />


        <TextView
            android:id="@+id/text_schoolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toRightOf="@+id/img_logo"
            android:fontFamily="@font/happy_monkey"
            android:gravity="center_horizontal"
            android:text="@string/school_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/text_ple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_sn"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="5">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1.5"
            android:background="@drawable/shape_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/str_today"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1.5"
            android:background="@drawable/shape_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_below="@+id/text_ple"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/str_status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text=""
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_earlier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_bg"
        android:text="Earlier"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>